@@ -348,6 +348,64 @@ int32_t SPVM__Fn__memcpy(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
+int32_t SPVM__Fn__memmove(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  void* dest = stack[0].oval;
+  int32_t dest_byte_offset = stack[1].ival;
+  void* source = stack[2].oval;
+  int32_t source_byte_offset = stack[3].ival;
+  int32_t byte_length = stack[4].ival;
+
+  if (!dest) {
+    return env->die(env, "Destnation must be defined", MFILE, __LINE__);
+  }
+  
+  if (!(env->is_string(env, dest) || env->is_numeric_array(env, dest) || env->is_mulnum_array(env, dest))) {
+    return env->die(env, "Destnation must be a string type, a numeric arrya type, or a multi numeric array", MFILE, __LINE__);
+  }
+  
+  if (!source) {
+    return env->die(env, "Source must be defined", MFILE, __LINE__);
+  }
+
+  if (!(env->is_string(env, source) || env->is_numeric_array(env, source) || env->is_mulnum_array(env, source))) {
+    return env->die(env, "Source must be a string type, a numeric arrya type, or a multi numeric array", MFILE, __LINE__);
+  }
+
+  if (env->is_read_only(env, dest)) {
+    return env->die(env, "Destnation must not be a read-only string", MFILE, __LINE__);
+  }
+  
+  if (byte_length == 0) {
+    return 0;
+  }
+  else if (byte_length < 0) {
+    return env->die(env, "The length must be more than or equals to 0", MFILE, __LINE__);
+  }
+  
+  char* dest_bytes = (char*)env->get_chars(env, dest);
+  int32_t dest_len = env->length(env, dest);
+  int32_t dest_elem_byte_size = env->get_elem_byte_size(env, dest);
+  int32_t dest_byte_length = dest_elem_byte_size * dest_len;
+  
+  const char* source_bytes = env->get_chars(env, source);
+  int32_t source_len = env->length(env, source);
+  int32_t source_elem_byte_size = env->get_elem_byte_size(env, source);
+  int32_t source_byte_length = source_elem_byte_size * source_len;
+  
+  if (dest_byte_offset + byte_length > dest_byte_length) {
+    return env->die(env, "Destnation byte_offset + byte_length must be within the range of the destnation array", MFILE, __LINE__);
+  }
+
+  if (source_byte_offset + byte_length > source_byte_length) {
+    return env->die(env, "Source byte_offset + byte_length must be within the range of the source array", MFILE, __LINE__);
+  }
+  
+  memmove((char*)(dest_bytes + dest_byte_offset), (char*)(source_bytes + source_byte_offset), byte_length);
+  
+  return 0;
+}
+
 int32_t SPVM__Fn__memcpy_byte(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   void* sv_dest = stack[0].oval;
