@@ -451,6 +451,11 @@ SKIP: {
   ok(SPVM::TestCase::Lib::Fn3->memcpy);
 }
 
+# memmove
+{
+  ok(SPVM::TestCase::Lib::Fn3->memmove);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::get_memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
