@@ -2099,4 +2099,162 @@ class TestCase::Lib::Fn3 {
     
     return 1;
   }
+
+  static method memmove : int () {
+    
+    # Basic
+    {
+      # Copy numeric array
+      {
+        # byte
+        {
+          my $dist = [(byte)1, 2, 3, 4];
+          my $source = [(byte)10, 11, 12, 13];
+          
+          Fn->memmove($dist, 0, $source, 0, 4);
+          
+          my $dist_expected = [(byte)10, 11, 12, 13];
+          unless (Fn->equals_array_byte($dist, $dist_expected)) {
+            return 0;
+          }
+        }
+
+        # double
+        {
+          my $dist = [(double)1, 2, 3, 4];
+          my $source = [(double)10, 11, 12, 13];
+          
+          Fn->memmove($dist, 0, $source, 0, 8 * 4);
+          
+          my $dist_expected = [(double)10, 11, 12, 13];
+          unless (Fn->equals_array_double($dist, $dist_expected)) {
+            return 0;
+          }
+        }
+      }
+
+      # Copy string
+      {
+        my $dist = (string)[(byte)1, 2, 3, 4];
+        my $source = (string)[(byte)10, 11, 12, 13];
+        
+        Fn->memmove($dist, 0, $source, 0, 4);
+        
+        my $dist_expected = (string)[(byte)10, 11, 12, 13];
+        unless ($dist eq $dist_expected) {
+          return 0;
+        }
+      }
+
+      # Copy multi numeric array
+      {
+        my $dist = new Complex_2d[4];
+        my $source = new Complex_2d[4];
+        $source->[0]{re} = 1;
+        $source->[0]{im} = 2;
+        $source->[2]{re} = 3;
+        $source->[2]{im} = 4;
+        
+        Fn->memmove($dist, 0, $source, 0, 2 * 8 * 4);
+        
+        unless ($dist->[0]{re} == 1) {
+          return 0;
+        }
+        unless ($dist->[0]{im} == 2) {
+          return 0;
+        }
+        unless ($dist->[2]{re} == 3) {
+          return 0;
+        }
+        unless ($dist->[2]{im} == 4) {
+          return 0;
+        }
+      }
+
+      # Copy string to bytes
+      {
+        my $dist = [(byte)1, 2, 3, 4];
+        my $source = (string)[(byte)10, 11, 12, 13];
+        
+        Fn->memmove($dist, 0, $source, 0, 4);
+        
+        my $dist_expected = [(byte)10, 11, 12, 13];
+        unless ($dist eq $dist_expected) {
+          return 0;
+        }
+      }
+    }
+
+    # Copy offset + length
+    {
+      # int
+      {
+        my $dist = [(int)1, 2, 3, 4];
+        my $source = [(int)10, 11, 12, 13];
+        
+        Fn->memmove($dist, 1 * 4, $source, 1 * 4, 2 * 4);
+        
+        my $dist_expected = [(int)1, 11, 12, 4];
+        unless (Fn->equals_array_int($dist, $dist_expected)) {
+          return 0;
+        }
+      }
+    }
+    
+    # Exception
+    {
+      # Exception - Destnation must be defined
+      {
+        my $source = [(byte)1, 3, 5];
+        eval { Fn->memmove(undef, 0, $source, 0, 3); };
+        unless ($@) {
+          return 0;
+        }
+      }
+
+      # Exception - Source must be defined
+      {
+        my $dest = new byte[4];
+        eval { Fn->memmove($dest, 0, undef, 0, 3); };
+        unless ($@) {
+          return 0;
+        }
+      }
+      
+      # Exception - Length must be more than or equals to 0
+      {
+        my $dest = new byte[4];
+        my $source = [(byte)1, 3, 5];
+        eval { Fn->memmove($dest, 0, $source, 0, -1); };
+        unless ($@) {
+          return 0;
+        }
+      }
+      
+      # Exception - Destnation offset + length must be within the range of the destnation array
+      {
+        my $dest = new byte[4];
+        my $source = [(byte)1, 3, 5];
+        eval { Fn->memmove($dest, 2, $source, 0, 3); };
+        unless ($@) {
+          return 0;
+        }
+      }
+
+      # Exception - Source offset + length must be within the range of the source array
+      {
+        my $dest = new byte[4];
+        my $source = [(byte)1, 3, 5];
+        eval { Fn->memmove($dest, 0, $source, 1, 3); };
+        unless ($@) {
+          return 0;
+        }
+      }
+    }
+    
+    $@ = undef;
+
+    
+    return 1;
+  }
 }
