@@ -23,6 +23,8 @@ Revision history for SPVM
         * Add the "shorten" native API.
         * Add Fn->shorten.
         * Add Fn->chomp.
+        * Add Fn->memcpy.
+        * Add Fn->memmove.
         [BUG FIX]
         * Fix the bug that Fn->new_array_proto doesn't create multi numeric array and number array correctly.
         
